gitops/shared_services/gitlab/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
spec:
  serviceName: gitlab-service
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:16.11.0-ce.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: gitlab-config
              mountPath: /etc/gitlab
            - name: gitlab-data
              mountPath: /var/opt/gitlab
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-config-pvc
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
